@@ -1,8 +1,10 @@
 2017-04-06  Jérôme Pasquier  <rainbru@free.fr>
 
+	* src/client/AnimatedImage.cpp (debug): add a logging function to
+	know why the image drawing isn't working.
+
 	* src/client/AnimatedImage.cpp (AnimatedImage): resize the image
 	vector fix a segfault.
-
 
 2017-04-05  Jérôme Pasquier  <rainbru@free.fr>
 
